src/renderer/pages/home/overview/content_block/content_block.module.css
.outer {
  display: flex;
  flex-direction: column;
  position: relative;
  border-style: solid;
  border-width: 1px;
  border-color: rgb(159 116 192 / 10%);
  background-color: var(--purple-dark);
  overflow: hidden;
  border-radius: 10px;
  height: 100%;
}

.title {
  margin: 0;
  height: 60px;
  display: flex;
  align-items: center;
  color: var(--green-bright);
}

.content {
  flex: 1;
  overflow-y: auto;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  color: var(--purple-light);
  height: 50px;
  border-bottom: 1px solid rgb(159 116 192 / 10%);
}

.header.active {
  cursor: pointer;
  transition: background-color 0.2s ease-in-out;
}

.header.active:hover {
  background-color: rgb(255 255 255 / 5%);
}

